# python-code-challenge-template

./: .coverage  .env  .env.prod  .env.test  .flaskenv  .gitignore  Dockerfile  Dockerfile.multistage  Dockerfile.prod  Makefile  README.md  docker-compose.yml  pyproject.toml
cmd/api/: config.py  main.py
comd/api/: __init__.py  config.py  main.py
database/postgres/: .env.prod  .env.test  Dockerfile
database/postgres/scripts/: 1-create_tables.sql  1-create_users_tables.sql
deployments/heroku/: Dockerfile
deployments/heroku/app/: Dockerfile.multistage
deployments/heroku/app/.temp/: pyproject.toml
deployments/heroku/scripts/: build_app.sh  copy_code.sh  delete_code.sh  destroy_app.sh  setup_env.sh  setup_env_vars.sh
deployments/heroku/terraform/: main.tf  resources.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf  versions.tf
docs/api/postman_collection/: python-code-challenge-template.postman_collection.json
docs/api/tests/integration/: coverage_report.out
docs/api/tests/unit/: coverage_report.out
internal/application/service/healthcheck/: service.py  test_get_status.py  test_service_fixtures.py
internal/application/service/user/: service.py  test_create.py  test_delete.py  test_get_all.py  test_get_by_id.py  test_update.py  (+1 more)
internal/di/: di.py
internal/infrastructure/datastore/: datastore.py
internal/infrastructure/env/: env.py
internal/presentation/entity/: user.py
scripts/: setup_env.sh  setup_env_vars.sh  setup_env_vars.test.sh
tests/: .env.test  Dockerfile.test  integration_test.py
tests/api/: api_test.py  integration_test.py
tests/api/user/: test_create.py
tests/rest_api/: rest_api_test.py
tools/api/commands/: __init__.py  config.yml  run.py  version.py
(+75 files in other folders)
