[tool.poetry]
name = "python-code-challenge-template"
version = "0.1.0"
description = "Python Code Challenge Template"
authors = ["Ícaro Ribeiro <icaroribeiro@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.0"
Flask = "^2.1.2"
Flask-SQLAlchemy = "^2.5.1"
Flask-Injector = "^0.14.0"
flask-restplus = "^0.13.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
