[tool.poetry]
name = "python-code-challenge-template"
version = "0.1.0"
description = "Python Code Challenge Template"
authors = ["Ícaro Ribeiro <icaroribeiro@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.0"
Flask = "^2.1.2"
Flask-SQLAlchemy = "^2.5.1"
Flask-Injector = "^0.14.0"
dependency-injector = "^4.39.1"
pydantic = "^1.9.1"
Faker = "^13.15.1"
SQLAlchemy = "^1.4.39"
psycopg2 = "^2.9.3"
pytest = "^7.1.2"
factory-boy = "^3.2.1"
coverage = "^6.4.4"
Flask-API = "^3.0.post1"
flask-restx = "^1.1.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
